[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Start/Start.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/8-Bit Wonder/8-Bit Wonder.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://controls/InteractiveButton/InteractiveButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scenes/MainMenu/margin.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/8-Bit Wonder/8-Bit Wonder.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/scenes/MainMenu/model_3.png" type="Texture" id=7]
[ext_resource path="res://assets/audio/Menu Selection Click.wav" type="AudioStream" id=8]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.4, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="Start" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Effects"

[node name="MenuParticles" type="CPUParticles2D" parent="."]
position = Vector2( 512, 300 )
amount = 128
lifetime = 4.0
preprocess = 4.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
linear_accel = 30.0
scale_amount = 6.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modelleft" type="TextureRect" parent="HBoxContainer"]
margin_right = 214.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 246.0
margin_right = 746.0
margin_bottom = 568.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 2

[node name="Start" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 440.0
margin_right = 500.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="Back" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 536.0
margin_right = 500.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="modelright" type="TextureRect" parent="HBoxContainer"]
margin_left = 778.0
margin_right = 992.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -34.0
margin_right = 200.0
margin_bottom = 34.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 6 )
align = 1
max_length = 12
expand_to_text_length = true
placeholder_text = "ENTER NAME"

[node name="footer" type="TextureRect" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 400.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )
texture = ExtResource( 4 )
expand = true
flip_v = true
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="text_changed" from="VBoxContainer/Name" to="." method="_on_Name_text_changed"]
[connection signal="text_entered" from="VBoxContainer/Name" to="." method="_on_Name_text_entered"]
